--- a/css/index.css
+++ b/css/index.css
@@ -51,3 +51,16 @@ body {
     display: none;
 }
 
+.btn {
+    background-color: #304257;
+}
+
+hr {
+    background-color: #304257;
+    height: 3px
+}
+
+tr {
+    height: 50px
+}
+
